// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Carousel Custom Style 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexGrow": 1,
        "justifyContent": "center",
        "overflow": "visible",
      },
      Object {
        "width": 200,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 5,
          "elevation": 4,
          "flexGrow": 1,
          "justifyContent": "center",
          "overflow": "visible",
          "padding": 16,
          "shadowColor": "#14171A",
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 8,
        },
        Object {
          "height": 200,
          "opacity": 0.65,
          "width": 176,
        },
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="24"
      bbWidth="24"
      color="#00B0FF"
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          undefined,
          false,
          Object {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
    >
      <RNSVGPath
        d="M0 0h24v24H0z"
        fill={null}
        fillOpacity={1}
        fillRule={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
          ]
        }
        rotation={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth="1"
        x={0}
        y={0}
      />
      <RNSVGPath
        d="M22 3H2C.897 3 0 3.896 0 5v13c0 1.103.897 2 2 2h9v2H7v2h10v-2h-4v-2h9c1.103 0 2-.897 2-2V5c0-1.104-.897-2-2-2zm0 2l-.002 10H2V5h20zM2 18v-1h19.997v1H2z"
        fill={
          Array [
            0,
            0,
            0.6901960784313725,
            1,
            1,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
          ]
        }
        rotation={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth="1"
        x={0}
        y={0}
      />
    </RNSVGSvgView>
    <View
      style={
        Object {
          "height": 16,
          "width": 16,
        }
      }
    />
    <View>
      <View
        style={Object {}}
      >
        <Text
          selectable={false}
          style={
            Array [
              Object {
                "marginVertical": 0,
                "textAlign": "center",
              },
              Object {},
              Object {},
            ]
          }
        >
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#00B0FF",
                  "fontSize": 17,
                  "marginBottom": 17,
                  "marginTop": 17,
                  "marginVertical": 0,
                  "textAlign": "center",
                }
              }
            >
              STEP 01
            </Text>
          </Text>
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "height": 24,
          "width": 24,
        }
      }
    />
    <View>
      <View
        style={Object {}}
      >
        <Text
          selectable={false}
          style={
            Array [
              Object {
                "marginVertical": 0,
                "textAlign": "center",
              },
              Object {},
              Object {},
            ]
          }
        >
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "alignSelf": "center",
                  "color": "#546E7A",
                  "fontSize": 15,
                  "marginBottom": 15,
                  "marginTop": 15,
                  "marginVertical": 0,
                  "textAlign": "center",
                }
              }
            >
              Some description goes here
            </Text>
          </Text>
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Carousel Default 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexGrow": 1,
        "justifyContent": "center",
        "overflow": "visible",
      },
      Object {
        "width": 200,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 5,
          "elevation": 4,
          "flexGrow": 1,
          "justifyContent": "center",
          "overflow": "visible",
          "padding": 16,
          "shadowColor": "#14171A",
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 8,
        },
        Object {
          "height": 200,
          "opacity": 1,
          "width": 176,
        },
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="24"
      bbWidth="24"
      color="#00B0FF"
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          undefined,
          false,
          Object {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
    >
      <RNSVGPath
        d="M0 0h24v24H0z"
        fill={null}
        fillOpacity={1}
        fillRule={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
          ]
        }
        rotation={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth="1"
        x={0}
        y={0}
      />
      <RNSVGPath
        d="M22 3H2C.897 3 0 3.896 0 5v13c0 1.103.897 2 2 2h9v2H7v2h10v-2h-4v-2h9c1.103 0 2-.897 2-2V5c0-1.104-.897-2-2-2zm0 2l-.002 10H2V5h20zM2 18v-1h19.997v1H2z"
        fill={
          Array [
            0,
            0,
            0.6901960784313725,
            1,
            1,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
          ]
        }
        rotation={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth="1"
        x={0}
        y={0}
      />
    </RNSVGSvgView>
    <View
      style={
        Object {
          "height": 16,
          "width": 16,
        }
      }
    />
    <View>
      <View
        style={Object {}}
      >
        <Text
          selectable={false}
          style={
            Array [
              Object {
                "marginVertical": 0,
                "textAlign": "center",
              },
              Object {},
              Object {},
            ]
          }
        >
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#00B0FF",
                  "fontSize": 17,
                  "marginBottom": 17,
                  "marginTop": 17,
                  "marginVertical": 0,
                  "textAlign": "center",
                }
              }
            >
              STEP 01
            </Text>
          </Text>
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "height": 24,
          "width": 24,
        }
      }
    />
    <View>
      <View
        style={Object {}}
      >
        <Text
          selectable={false}
          style={
            Array [
              Object {
                "marginVertical": 0,
                "textAlign": "center",
              },
              Object {},
              Object {},
            ]
          }
        >
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "alignSelf": "center",
                  "color": "#546E7A",
                  "fontSize": 15,
                  "marginBottom": 15,
                  "marginTop": 15,
                  "marginVertical": 0,
                  "textAlign": "center",
                }
              }
            >
              Some description goes here
            </Text>
          </Text>
        </Text>
      </View>
    </View>
  </View>
</View>
`;
